Add Contact Us link to About Us page and update home page navigation

--- a/about.html
+++ b/about.html
@@ -10,22 +10,24 @@
 <body>
 
   <!-- Header (reused from main page) -->
-  <header class="topbar">
-    <div class="topbar-inner">
-      <a href="index.html" class="brand" aria-label="Go to home">
-        <div class="brand-mark" aria-hidden="true">⌂</div>
-        <div>
-          <div class="brand-title">Community Hub</div>
-          <div class="brand-subtitle">Find local links quickly</div>
-        </div>
-      </a>
+ <header class="topbar">
+  <div class="topbar-inner">
+    <!-- Brand/Home Link -->
+    <a href="index.html" class="brand" aria-label="Go to home">
+      <div class="brand-mark" aria-hidden="true">⌂</div>
+      <div>
+        <div class="brand-title">Community Hub</div>
+        <div class="brand-subtitle">Find local links quickly</div>
+      </div>
+    </a>
 
-      <nav class="about-nav" aria-label="Primary">
-        <a href="index.html" class="btn">Home</a>
-      </nav>
-    </div>
-  </header>
-
+    <!-- Navigation Links -->
+    <nav aria-label="Primary">
+      <a href="index.html" class="btn">Home</a>
+      <a href="contact.html" class="btn">Contact Us</a>
+    </nav>
+  </div>
+</header>
   <main class="container">
     <!-- Intro -->
     <section class="section">
