--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
    <div id="cursor-light"></div>
 
   <!-- Page -->
-  <header class="topbar">
+ <header class="topbar">
   <div class="topbar-inner">
 
     <!-- Brand (clickable home link) -->
@@ -49,7 +49,7 @@
     </div>
 
     <!-- Primary Navigation -->
-    <nav aria-label="Primary">
+    <nav class="primary-nav" aria-label="Primary">
       <a href="about.html" class="btn">About Us</a>
       <a href="contact.html" class="btn">Contact</a>
     </nav>
