fixed the contact us page text boxes : /

--- a/contact.html
+++ b/contact.html
@@ -47,6 +47,7 @@
                 <label for="name"><strong>Name</strong></label>
                 <input
                   id="name"
+                  class="input"
                   type="text"
                   placeholder="Your name"
                   required
@@ -58,6 +59,7 @@
                 <label for="email"><strong>Email</strong></label>
                 <input
                   id="email"
+                  class="input"
                   type="email"
                   placeholder="you@example.com"
                   required
@@ -69,6 +71,7 @@
                 <label for="message"><strong>Message</strong></label>
                 <textarea
                   id="message"
+                  class="input"
                   rows="5"
                   placeholder="Tell us how we can help, or suggest a resource…"
                   required
@@ -98,7 +101,7 @@
       </p>
       <p>
         <strong>Email:</strong>
-        <a href="mailto:communityhub@example.com">
+        <a href="mailto:support@communityhub.com">
           communityhub@example.com
         </a>
       </p>
