--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       <label class="sr-only" for="searchInput">Search links</label>
       <input
         id="searchInput"
+        class="input"
         type="search"
         placeholder="Search: orthopedics, Thai, tutoring, utilities..."
         autocomplete="off"
