--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,24 +11,27 @@
 <body>
 
   <!-- Header (reused from main page) -->
- <header class="topbar">
-  <div class="topbar-inner">
-    <!-- Brand/Home Link -->
-    <a href="index.html" class="brand" aria-label="Go to home">
-      <div class="brand-mark" aria-hidden="true">⌂</div>
-      <div>
-        <div class="brand-title">Community Hub</div>
-        <div class="brand-subtitle">Find local links quickly</div>
-      </div>
-    </a>
+  <header class="topbar">
+    <div class="topbar-inner">
+      <!-- Brand/Home Link -->
+      <a href="index.html" class="brand" aria-label="Go to home">
+        <div class="brand-mark" aria-hidden="true">⌂</div>
+        <div>
+          <div class="brand-title">Community Hub</div>
+          <div class="brand-subtitle">Find local links quickly</div>
+        </div>
+      </a>
 
-    <!-- Navigation Links -->
-    <nav aria-label="Primary">
-      <a href="index.html" class="btn">Home</a>
-      <a href="contact.html" class="btn">Contact Us</a>
-    </nav>
-  </div>
-</header>
+      <!-- Cool Little Dynamic Cursor Effect -->
+      <div id="cursor-light"></div>
+
+      <!-- Navigation Links -->
+      <nav aria-label="Primary">
+        <a href="index.html" class="btn">Home</a>
+        <a href="contact.html" class="btn">Contact Us</a>
+      </nav>
+    </div>
+  </header>
   <main class="container">
     <!-- Intro -->
     <section class="section">
@@ -105,6 +109,8 @@
       </p>
     </footer>
   </main>
-
+  <script src="dynamicCursor.js"></script>
+  s
 </body>
+
 </html>
