--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,13 +13,14 @@
   <!-- Header -->
   <header class="topbar">
     <div class="topbar-inner">
-      <div class="brand">
+      <!-- Brand (clickable home link) -->
+      <a href="index.html" class="brand" aria-label="Go to home">
         <div class="brand-mark" aria-hidden="true">⌂</div>
         <div>
           <div class="brand-title">Community Hub</div>
-          <div class="brand-subtitle">Connecting people to local resources</div>
+          <div class="brand-subtitle">Find local links quickly</div>
         </div>
-      </div>
+      </a>
 
       <nav aria-label="Primary">
         <a href="index.html" class="btn">Home</a>
@@ -26,7 +28,8 @@
       </nav>
     </div>
   </header>
-
+  <!-- Cool Little Dynamic Cursor Effect -->
+  <div id="cursor-light"></div>
   <main class="container">
     <!-- Intro -->
     <section class="section">
@@ -41,42 +44,24 @@
       <div class="grid">
         <article class="card" style="grid-column: span 12;">
           <form class="card-link" aria-label="Contact form">
-            
+
             <div style="display: grid; gap: 14px;">
               <div>
                 <label for="name"><strong>Name</strong></label>
-                <input
-                  id="name"
-                  class="input"
-                  type="text"
-                  placeholder="Your name"
-                  required
-                  style="margin-top:6px;"
-                />
+                <input id="name" class="input" type="text" placeholder="Your name" required style="margin-top:6px;" />
               </div>
 
               <div>
                 <label for="email"><strong>Email</strong></label>
-                <input
-                  id="email"
-                  class="input"
-                  type="email"
-                  placeholder="you@example.com"
-                  required
-                  style="margin-top:6px;"
-                />
+                <input id="email" class="input" type="email" placeholder="you@example.com" required
+                  style="margin-top:6px;" />
               </div>
 
               <div>
                 <label for="message"><strong>Message</strong></label>
-                <textarea
-                  id="message"
-                  class="input"
-                  rows="5"
-                  placeholder="Tell us how we can help, or suggest a resource…"
-                  required
-                  style="margin-top:6px;"
-                ></textarea>
+                <textarea id="message" class="input" rows="5"
+                  placeholder="Tell us how we can help, or suggest a resource…" required
+                  style="margin-top:6px;"></textarea>
               </div>
 
               <button type="submit" class="btn btn-primary">
@@ -113,6 +98,8 @@
       </p>
     </footer>
   </main>
+  <script src="dynamicCursor.js"></script>
 
 </body>
+
 </html>
