--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -22,52 +23,47 @@
     </div>
   </div>
   <!-- Cool Little Dynamic Cursor Effect -->
-   <div id="cursor-light"></div>
+  <div id="cursor-light"></div>
 
   <!-- Page -->
- <header class="topbar">
-  <div class="topbar-inner">
+  <header class="topbar">
+    <div class="topbar-inner">
 
-    <!-- Brand (clickable home link) -->
-    <a href="index.html" class="brand" aria-label="Go to home">
-      <div class="brand-mark" aria-hidden="true">⌂</div>
-      <div>
-        <div class="brand-title">Community Hub</div>
-        <div class="brand-subtitle">Find local links quickly</div>
+      <!-- Brand (clickable home link) -->
+      <a href="index.html" class="brand" aria-label="Go to home">
+        <div class="brand-mark" aria-hidden="true">⌂</div>
+        <div>
+          <div class="brand-title">Community Hub</div>
+          <div class="brand-subtitle">Find local links quickly</div>
+        </div>
+      </a>
+
+      <!-- Search -->
+      <div class="search-wrap">
+        <label class="sr-only" for="searchInput">Search links</label>
+        <input id="searchInput" class="input" type="search"
+          placeholder="Search: orthopedics, Thai, tutoring, utilities..." autocomplete="off" />
       </div>
-    </a>
 
-    <!-- Search -->
-    <div class="search-wrap">
-      <label class="sr-only" for="searchInput">Search links</label>
-      <input
-        id="searchInput"
-        class="input"
-        type="search"
-        placeholder="Search: orthopedics, Thai, tutoring, utilities..."
-        autocomplete="off"
-      />
+      <!-- Primary Navigation -->
+      <nav class="primary-nav" aria-label="Primary">
+        <a href="about.html" class="btn">About Us</a>
+        <a href="contact.html" class="btn">Contact</a>
+      </nav>
+
     </div>
 
-    <!-- Primary Navigation -->
-    <nav class="primary-nav" aria-label="Primary">
-      <a href="about.html" class="btn">About Us</a>
-      <a href="contact.html" class="btn">Contact</a>
-    </nav>
-
-  </div>
-
-</header>
+  </header>
 
   <main class="container">
     <section class="section">
       <h2 class="section-title">Quick Index</h2>
       <p class="section-subtitle">Browse by category or search. Click a card to open the site.</p>
       <div class="tagbar">
-      
+
         <!-- Little "Tagbar" to enable faster searching -->
-      <div class="tagbar-title">Filter by tag:</div>
-      <div id="tagBar" class="tagbar-chips" aria-label="Tag filters"></div>
+        <div class="tagbar-title">Filter by tag:</div>
+        <div id="tagBar" class="tagbar-chips" aria-label="Tag filters"></div>
       </div>
       <div id="resultsMeta" class="results-meta" aria-live="polite"></div>
 
@@ -201,5 +197,7 @@
   </main>
 
   <script src="index.js"></script>
+  <script src="dynamicCursor.js"></script>
 </body>
+
 </html>
