--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
       <p>
         <strong>Email:</strong>
         <a href="mailto:support@communityhub.com">
-          communityhub@example.com
+          support@communityhub.com
         </a>
       </p>
     </section>
