--- a/index.html
+++ b/index.html
@@ -192,12 +192,14 @@
     </section>
 
     <footer class="footer">
-      <p>Maintain this list in one file. Add cards, keep tags descriptive.</p>
+      <div class="footer-inner">
+        <a href="/Copyright.pdf" class="footer-link">Copyright Checklist</a>
+        <a href="/Planofwork.pdf" class="footer-link">Plan of Work</a>
+      </div>
     </footer>
-  </main>
 
-  <script src="index.js"></script>
-  <script src="dynamicCursor.js"></script>
+    <script src="index.js"></script>
+    <script src="dynamicCursor.js"></script>
 </body>
 
 </html>
