--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
     <section class="section">
       <h1 class="section-title">Contact Us</h1>
       <p class="section-subtitle">
-        Have feedback, suggestions, or a resource to share? We’d love to hear from you!
+        Have feedback, suggestions, or a resource to share? We’d love to hear from you.
       </p>
     </section>
 
